Various configuration changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,15 +8,12 @@ set-option -g set-titles on
 set -g set-titles-string "#S"
 #set -ga terminal-overrides ',xterm*:XT'
 
-set -g status-keys vi
 set -g history-limit 10000
 set -g allow-rename on
 #set -g allow-rename 0
 
 # When nested, use C-f to send prefix to inner tmux
 bind-key -n C-f send-prefix
-
-set-window-option -g mode-keys vi
 
 #run-shell /home/dak/.config/logging.tmux
 
@@ -45,10 +42,10 @@ set -g renumber-windows on
 setw -g alternate-screen on
 
 # Use v to trigger selection
-bind-key -T copy-mode-vi v send-keys -X begin-selection
+#bind-key -T copy-mode-vi v send-keys -X begin-selection
 
 # Use y to yank current selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+#bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # THEME
 ## COLORSCHEME: gruvbox dark
