--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -18,6 +18,9 @@ font:
     family: Source Code Pro
     # Style can be specified to pick a specific face.
     # style: Italic
+  offset:
+    x: 1
+    y: 1
 
 # Colors (Gruvbox dark)
 colors:
