--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -11,18 +11,22 @@ font:
   bold:
     family: Source Code Pro
     # Style can be specified to pick a specific face.
-    # style: Bold
+    style: Bold
 
   # The italic font face
   italic:
     family: Source Code Pro
     # Style can be specified to pick a specific face.
-    # style: Italic
+    style: Italic
   offset:
     x: 1
     y: 1
 
 # Colors (Gruvbox dark)
+window:
+    decorations: "none"
+    startup_mode: Maximized
+
 colors:
   # Default colors
   primary:
