--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,275 +1,64 @@
-# Clipboard
-map ctrl+shift+v        paste_from_clipboard
-map ctrl+shift+c        copy_to_clipboard
-
-# Clipboard (macOS)
-map super+v             paste_from_clipboard
-map super+c             copy_to_clipboard
-
-map shift+insert        paste_from_selection
-# You can also pass the contents of the current selection to any program using
-# pass_selection_to_program. By default, the system's open program is used, but
-# you can specify your own, for example:
-# map ctrl+shift+o      pass_selection_to_program firefox
-map ctrl+shift+o        pass_selection_to_program 
-
-# Scrolling
-map ctrl+shift+up        scroll_line_up
-map ctrl+shift+down      scroll_line_down
-map ctrl+shift+k         scroll_line_up
-map ctrl+shift+j         scroll_line_down
-map ctrl+shift+page_up   scroll_page_up
-map ctrl+shift+page_down scroll_page_down
-map ctrl+shift+home      scroll_home
-map ctrl+shift+end       scroll_end
-map ctrl+shift+h         show_scrollback
-
-# Window management
-map ctrl+shift+enter    new_window
-map ctrl+shift+w        close_window
-map ctrl+shift+]        next_window
-map ctrl+shift+[        previous_window
-map ctrl+shift+f        move_window_forward
-map ctrl+shift+b        move_window_backward
-map ctrl+shift+1        first_window
-map ctrl+shift+2        second_window
-map ctrl+shift+3        third_window
-map ctrl+shift+4        fourth_window
-map ctrl+shift+5        fifth_window
-map ctrl+shift+6        sixth_window
-map ctrl+shift+7        seventh_window
-map ctrl+shift+8        eighth_window
-map ctrl+shift+9        ninth_window
-map ctrl+shift+0        tenth_window
-
-# Window management (macOS)
-map super+n             new_tab
-map ctrl+shift+`        next_tab
-map super+1             goto_tab 1
-map super+2             goto_tab 2
-map super+3             goto_tab 3
-map super+4             goto_tab 4
-map super+5             goto_tab 5
-map super+6             goto_tab 6
-map super+7             goto_tab 7
-map super+8             goto_tab 8
-map super+9             goto_tab 9
-
 tab_bar_style           hidden
-
-# You can also open a new window running an arbitrary program, for example:
-# map ctrl+shift+y      new_window mutt
-# You can also pass the current selection to the new program by using the @selection placeholder
-# map ctrl+shift+y      new_window less @selection
-# Finally, you can even send the contents of the current screen + history buffer as stdin using
-# the placeholders @text (which is the plain text) and @ansi (which includes text styling escape codes)
-# For example, the following command opens the scrollback buffer in less in a new window.
-# map ctrl+shift+y      new_window @ansi less +G -R
-
-
-
-
-# Miscellaneous
-map ctrl+shift+equal    increase_font_size
-map ctrl+shift+minus    decrease_font_size
-map ctrl+shift+backspace restore_font_size
-
-# Sending arbitrary text on shortcut key presses
-# You can tell kitty to send arbitrary (UTF-8) encoded text to
-# the client program when pressing specified shortcut keys. For example:
-# send_text all ctrl+alt+a Special text
-# This will send "Special text" when you press the Ctrl+Alt+a key combination.
-# The text to be sent is a python string literal so you can use escapes like
-# \x1b to send control codes or \u21fb to send unicode characters (or you can
-# just input the unicode characters directly as UTF-8 text). The first argument
-# to send_text is the keyboard modes in which to activate the shortcut. The possible
-# values are normal or application or kitty or a comma separated combination of them.
-# The special keyword all means all modes. The modes normal and application refer to
-# the DECCKM cursor key mode for terminals, and kitty refers to the special kitty
-# extended keyboard protocol. Another example, that outputs a word and then moves the cursor
-# to the start of the line (same as pressing the Home key):
-# send_text normal ctrl+alt+a Word\x1b[H
-# send_text application ctrl+alt+a Word\x1bOH
-
-
-# Symbol mapping (special font for specified unicode code points). Map the
-# specified unicode codepoints to a particular font. Useful if you need special
-# rendering for some symbols, such as for Powerline. Avoids the need for
-# patched fonts. Each unicode code point is specified in the form U+<code point
-# in hexadecimal>. You can specify multiple code points, separated by commas
-# and ranges separated by hyphens. symbol_map itself can be specified multiple times.
-# Syntax is:
-# 
-# symbol_map codepoints Font Family Name
-# 
-# For example:
-# 
-# symbol_map U+E0A0-U+E0A2,U+E0B0-U+E0B3 PowerlineSymbols
-
-
-# OS specific tweaks
-
-# Hide the kitty window's title bar on macOS.
 macos_hide_titlebar yes
-
 macos_option_as_alt yes
-font_family      Source Code Pro
-italic_font      Source Code Pro
-bold_font        Source Code Pro
-bold_italic_font Source Code Pro
-# gruvbox-dark colorscheme for kitty
-# snazzy theme used as base
-# Font size (in pts)
-font_size        13.0
-
-# The amount the font size is changed by (in pts) when increasing/decreasing
-# the font size in a running terminal.
-font_size_delta 1
-
+font_family      SauceCodePro Nerd Font
+italic_font      SauceCodePro Nerd Font
+bold_font        SauceCodePro Nerd Font
+bold_italic_font SauceCodePro Nerd Font
+font_size        14.0
 cursor_shape     block
 cursor_blink_interval     0
-cursor_stop_blinking_after 15.0
-scrollback_lines 2000
-scrollback_pager less +G -R
-
-# When viewing scrollback in a new window, put it in a new tab as well
-scrollback_in_new_tab no
-
-# Wheel scroll multiplier (modify the amount scrolled by the mouse wheel). Use negative
-# numbers to change scroll direction.
-wheel_scroll_multiplier 5.0
-
-# The interval between successive clicks to detect double/triple clicks (in seconds)
-click_interval 0.5
-
-# Characters considered part of a word when double clicking. In addition to these characters
-# any character that is marked as an alpha-numeric character in the unicode
-# database will be matched.
-select_by_word_characters :@-./_~?&=%+#
-
-# Hide mouse cursor after the specified number of seconds of the mouse not being used. Set to
-# zero to disable mouse cursor hiding.
-mouse_hide_wait 3.0
-
-# Set the active window to the window under the mouse when moving the mouse around
-focus_follows_mouse no
-
-# The enabled window layouts. A comma separated list of layout names. The special value * means
-# all layouts. The first listed layout will be used as the startup layout.
-# For a list of available layouts, see the file layouts.py
-enabled_layouts *
-
-# If enabled, the window size will be remembered so that new instances of kitty will have the same
-# size as the previous instance. If disabled, the window will initially have size configured
-# by initial_window_width/height, in pixels.
 remember_window_size   yes
 initial_window_width   640
 initial_window_height  400
-
-# Delay (in milliseconds) between screen updates. Decreasing it, increases
-# frames-per-second (FPS) at the cost of more CPU usage. The default value
-# yields ~100 FPS which is more than sufficient for most uses.
-repaint_delay    10
-
-# Delay (in milliseconds) before input from the program running in the terminal
-# is processed. Note that decreasing it will increase responsiveness, but also
-# increase CPU usage and might cause flicker in full screen programs that
-# redraw the entire screen on each loop, because kitty is so fast that partial
-# screen updates will be drawn.
-input_delay 3
-
-# Visual bell duration. Flash the screen when a bell occurs for the specified number of
-# seconds. Set to zero to disable.
-visual_bell_duration 0.0
-
-# Enable/disable the audio bell. Useful in environments that require silence.
 enable_audio_bell yes
 
-# The modifier keys to press when clicking with the mouse on URLs to open the URL
-open_url_modifiers ctrl+shift
-
-# The program with which to open URLs that are clicked on. The special value "default" means to
-# use the operating system's default URL handler.
-open_url_with default
-
-# Choose whether to use the system implementation of wcwidth() (used to
-# control how many cells a character is rendered in).  If you use the system
-# implementation, then kitty and any programs running in it will agree. The
-# problem is that system implementations often are based on outdated unicode
-# standards and get the width of many characters, such as emoji, wrong. So if
-# you are using kitty with programs that have their own up-to-date wcwidth()
-# implementation, set this option to no.
-use_system_wcwidth yes
-
-# The value of the TERM environment variable to set
-term xterm-kitty
-
-# The width (in pts) of window borders. Will be rounded to the nearest number of pixels based on screen resolution.
-# Note that borders are displayed only when more than one window is visible. They are meant to separate multiple windows.
-window_border_width 1
-
-# The window margin (in pts) (blank area outside the border)
-window_margin_width 0
-
-# The window padding (in pts) (blank area between the text and the window border)
-window_padding_width 0
-
-# The color for the border of the active window
-active_border_color #00ff00
-
-# The color for the border of inactive windows
-inactive_border_color #cccccc
-
-# Tab-bar colors
-active_tab_foreground #000
-active_tab_background #eee
-inactive_tab_foreground #444
-inactive_tab_background #999
-
-
-# Adjust the line height. 
-# You can use either numbers, which are interpreted as pixels or percentages
-# (number followed by %), which are interpreted as percentages of the
-# unmodified line height. You can use negative pixels or percentages less than
-# 100% to reduce line height (but this might cause rendering artifacts).
-adjust_line_height 0
-
-#####cursor           #cccccc
-cursor                #ebdbb2
-foreground            #ebdbb2
-background            #272727
-selection_foreground  #655b53
-selection_background  #ebdbb2
-url_color             #d65c0d
-
-# black
-color0   #272727
-color8   #928373
+# gruvbox dark by morhetz, https://github.com/morhetz/gruvbox
+# background  #282828
+# foreground  #ebdbb2
+# cursor                #928374
+# selection_foreground  #928374
+# selection_background  #3c3836
+# color0  #282828
+# color8  #928374
 
 # red
-color1   #cc231c
-color9   #fb4833
+# color1                #cc241d
+# light red
+# color9                #fb4934
 
 # green
-color2   #989719
-color10  #b8ba25
+# color2                #98971a
+# light green
+# color10               #b8bb26
 
 # yellow
-color3   #d79920
-color11  #fabc2e
+# color3                #d79921
+# light yellow
+# color11               #fabd2d
 
 # blue
-color4  #448488
-color12 #83a597
+# color4                #458588
+# light blue
+# color12               #83a598
 
 # magenta
-color5   #b16185
-color13  #d3859a
+# color5                #b16286
+# light magenta
+# color13               #d3869b
 
 # cyan
-color6   #689d69
-color14  #8ec07b
+# color6                #689d6a
+# lighy cyan
+# color14               #8ec07c
 
-# white
-color7   #a89983
-color15  #ebdbb2
+# light gray
+# color7                #a89984
+# dark gray
+# color15               #928374
+
+
+# BEGIN_KITTY_THEME
+# Gruvbox Dark
+include current-theme.conf
+# END_KITTY_THEME
