--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -12,6 +12,7 @@ remember_window_size   yes
 initial_window_width   640
 initial_window_height  400
 enable_audio_bell yes
+confirm_os_window_close 0
 
 # BEGIN_KITTY_THEME
 # Gruvbox Dark
