--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,10 +1,10 @@
+font_family JetBrainsMono Nerd Font Mono
+italic_font      auto
+bold_font        auto
+bold_italic_font auto
 tab_bar_style           hidden
 macos_hide_titlebar yes
 macos_option_as_alt yes
-font_family      SauceCodePro Nerd Font
-italic_font      SauceCodePro Nerd Font
-bold_font        SauceCodePro Nerd Font
-bold_italic_font SauceCodePro Nerd Font
 font_size        14.0
 cursor_shape     block
 cursor_blink_interval     0
