--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,19 +1,23 @@
 set -g base-index 1
 
-set -g default-terminal screen-256color
+# Undercurl
+set -g default-terminal "${TERM}"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
 # Automatically set window title
-set-window-option -g automatic-rename on
+#set-window-option -g automatic-rename on
 set-option -g set-titles on
 set -g set-titles-string "#S"
-#set -ga terminal-overrides ',xterm*:XT'
 
+set -g status-keys vi
 set -g history-limit 10000
-set -g allow-rename on
-#set -g allow-rename 0
+#set -g allow-rename off
 
 # When nested, use C-f to send prefix to inner tmux
 bind-key -n C-f send-prefix
+
+set-window-option -g mode-keys vi
 
 #run-shell /home/dak/.config/logging.tmux
 
@@ -35,6 +39,8 @@ bind C new-window -c "#{pane_current_path}"
 # display-message duration in ms
 set-option -g display-time 5000
 
+set-option -g focus-events on
+
 bind-key P command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
 
 set -g renumber-windows on
@@ -42,10 +48,10 @@ set -g renumber-windows on
 setw -g alternate-screen on
 
 # Use v to trigger selection
-#bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi v send-keys -X begin-selection
 
 # Use y to yank current selection
-#bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # THEME
 ## COLORSCHEME: gruvbox dark
@@ -55,7 +61,6 @@ set -g status-left ''
 
 set -g window-status-style fg=default
 
-set-option -g status "off"
 
 # default statusbar color
 set-option -g status-style bg=default,fg=colour223 # bg=bg1, fg=fg1
@@ -79,3 +84,34 @@ set-window-option -g clock-mode-colour colour109 #blue
 
 # bell
 set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
+
+# Github colors for Tmux
+
+set -g mode-style "fg=#c9d1d9,bg=#090c10"
+
+set -g message-style "fg=#c9d1d9,bg=#090c10"
+set -g message-command-style "fg=#c9d1d9,bg=#090c10"
+
+set -g pane-border-style "fg=#b3b1ad"
+set -g pane-active-border-style "fg=#58a6ff"
+
+set -g status-justify "left"
+
+set -g status-style "fg=#58a6ff,bg=#090c10"
+
+set -g status-left-length "100"
+set -g status-right-length "100"
+
+set -g status-left-style NONE
+set -g status-right-style NONE
+
+set -g status-left "#[fg=#090c10,bg=#58a6ff,bold] #S #[fg=#58a6ff,bg=#090c10,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#090c10,bg=#090c10,nobold,nounderscore,noitalics]#[fg=#090c10,bg=#090c10] #{prefix_highlight} #[fg=#c5c5c5,bg=#090c10,nobold,nounderscore,noitalics]#[fg=#484f58,bg=#c5c5c5] %Y-%m-%d  %I:%M %p #[fg=#58a6ff,bg=#c5c5c5,nobold,nounderscore,noitalics]#[fg=#090c10,bg=#58a6ff,bold] #h "
+
+setw -g window-status-activity-style "underscore,fg=#b3b1ad,bg=#090c10"
+setw -g window-status-separator ""
+setw -g window-status-style "NONE,fg=#0d1117,bg=#090c10"
+setw -g window-status-format "#[fg=#090c10,bg=#090c10,nobold,nounderscore,noitalics]#[fg=#4d5566,bg=#090c10,nobold,nounderscore,noitalics] #I  #W #F #[fg=#090c10,bg=#090c10,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=#090c10,bg=#c5c5c5,nobold,nounderscore,noitalics]#[fg=#484f58,bg=#c5c5c5,bold] #I  #W #F #[fg=#c5c5c5,bg=#090c10,nobold,nounderscore,noitalics]"
+
+set-option -g status "off"
